# rounded-qr

./: .gitignore  .swift-format  Cargo.toml  Package.swift  build-xcframework.sh
Sources/RoundedQRWrapper/: RoundedQrCodeBuilder.swift
include/: module.modulemap  rounded_qr.h
src/: builder.rs  draw.rs  ffi.rs  lib.rs  types.rs
src/rendering/: display_list.rs  geometry.rs  mod.rs
