[package]
name = "rounded-qr"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[features]
ffi = []

[dependencies]
qrcodegen = "1.8"
paste = "1.0"
itertools = "0.10"
bitflags = "2.2"
num = "0.4"
